# HSE-Course

module-1/homework/BigInteger/: .clang-format  CMakeLists.txt  biginteger.cpp  biginteger.h  tests.cpp
module-1/homework/Geometry/: CMakeLists.txt  tests.cpp
module-1/homework/Geometry/hierarchy/: Vector2.hpp  circle.cpp  circle.h  common.hpp  ellipse.cpp  ellipse.h  line.cpp  line.h  point.cpp  point.h  polygon.cpp  polygon.h  ray.cpp  ray.h  rectangle.cpp  rectangle.h  segment.h  shape.h  square.cpp  square.h  triangle.cpp  triangle.h
module-1/homework/List/: CMakeLists.txt  list.cpp  list.h
module-1/homework/TypeList/: tests.cpp
module-1/homework/TypeList/typelist/: append.h  erase.h  indexof.h  length.h  noduplicates.h  replace.h  typeat.h  typelist.h
